--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+<!--                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
+                            </a> -->
                             <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
