--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
+<!--                 <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port2.jpg" alt="">
                     </div>
@@ -271,7 +271,7 @@
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
