--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
                     <h4>Information About me</h4>
                     <p>
                         I am fresher looking forward to develop my skill to another level <br /> <br /> I am a UX/UI Designer
-                        aslo i have some basic knowledge of HTML and CSS, 
-                        looking to develop my skill from entry-level UI/UX Designer to senior-level
-                        UI/UX Designer. 
+                        also I have some basic knowledge of HTML and CSS, 
+                        looking to develop my skill from entry-level UI/UX Designer to senior-level UI/UX Designer. 
                         Also have interest to learn about Product Design and Product Management.
                     </p>
                     <div class="btn-con">
@@ -272,7 +271,7 @@
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a> -->
-                        </div>
+<!--                         </div>
                     </div>
                 </div>
                 <div class="portfolio-item">
@@ -339,9 +338,9 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-<!--                             <a href="#" class="icon">
+                            <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a> -->
+                            </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
@@ -350,7 +349,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- <section class="container" id="blogs">
