--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        I am fresher looking forward to develop my skill to another level <br /> <br /> I am a UX/UI Designer
+                        I am fresher looking forward to develop my skill to another level <br /> <br /> I am a UI/UX Designer
                         also I have some basic knowledge of HTML and CSS, 
                         looking to develop my skill from entry-level UI/UX Designer to senior-level UI/UX Designer. 
                         Also have interest to learn about Product Design and Product Management.
@@ -500,9 +500,9 @@
                                 <a href="https://twitter.com/ashu_1450?t=324QToQ5KrPsZo8AbBqDsw&s=08" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="https://github.com/ashu1450" target="_blank">
-                                    <i class="fab fa-github"></i>
-                                </a>
+                                <a href="https://www.behance.net/ashu1998" class="icon">
+                                <i class="fab fa-behance"></i>
+                            </a>
                                
                             </div>
                         </div>
