--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     <div class="left-contact">
                         <h4>Contact me here</h4>
                         <p>
-                            I am Computer Science Engineer, completed my BE degree in Sona College of technology, Salem , India.
+                            I am Computer Science Engineer, completed my BE degree from Sona College of technology, Salem , India.
 
                         </p>
                         <div class="contact-info">
