--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     Ability to translate business requirements into technical solutions. Looking to start the career as an entry-level UI/UX Designer with a reputed firm driven by technology.
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1s58zHZeidkmkqq4vLXIdMmqa5q8SVGC4/view?usp=sharing" class="main-btn">
+                    <a href="https://drive.google.com/file/d/1s58zHZeidkmkqq4vLXIdMmqa5q8SVGC4/view?usp=drive_link" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -53,7 +53,7 @@
                         Also have interest to learn about Product Design and Product Management.
                     </p>
                     <div class="btn-con">
-                        <a href="https://drive.google.com/file/d/1s58zHZeidkmkqq4vLXIdMmqa5q8SVGC4/view?usp=sharing" class="main-btn">
+                        <a href="https://drive.google.com/file/d/1s58zHZeidkmkqq4vLXIdMmqa5q8SVGC4/view?usp=drive_link" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -520,7 +520,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="https://drive.google.com/file/d/1s58zHZeidkmkqq4vLXIdMmqa5q8SVGC4/view?usp=sharing" class="main-btn">
+                                <a href="https://drive.google.com/file/d/1s58zHZeidkmkqq4vLXIdMmqa5q8SVGC4/view?usp=drive_link" class="main-btn">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
