--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        I am fresher looking forward to develop my skill to another level <br /> <br /> I am a UI/UX Designer
+                        I am fresher looking forward to develop my skill to another level. <br /> <br /> I am a UI/UX Designer
                         also I have some basic knowledge of HTML and CSS, 
                         looking to develop my skill from entry-level UI/UX Designer to senior-level UI/UX Designer. 
                         Also have interest to learn about Product Design and Product Management.
