--- a/index.html
+++ b/index.html
@@ -92,55 +92,55 @@
                     <div class="progress-bar">
                         <p class="prog-title">UI Design</p>
                         <div class="progress-con">
-                            <p class="prog-text">90%</p>
+<!--                             <p class="prog-text">90%</p>
                             <div class="progress">
                                 <span class="html"></span>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">UX Research</p>
                         <div class="progress-con">
-                            <p class="prog-text">80%</p>
+<!--                             <p class="prog-text">80%</p>
                             <div class="progress">
                                 <span class="css"></span>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">Wireframing</p>
                         <div class="progress-con">
-                            <p class="prog-text">100%</p>
+<!--                             <p class="prog-text">100%</p>
                             <div class="progress">
                                 <span class="js"></span>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">Figma</p>
                         <div class="progress-con">
-                            <p class="prog-text">90%</p>
+<!--                             <p class="prog-text">90%</p>
                             <div class="progress">
                                 <span class="react"></span>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">Design Thinking Framework</p>
                         <div class="progress-con">
-                            <p class="prog-text">85%</p>
+<!--                             <p class="prog-text">85%</p>
                             <div class="progress">
                                 <span class="node"></span>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">Visual Design</p>
                         <div class="progress-con">
-                            <p class="prog-text">85%</p>
+<!--                             <p class="prog-text">85%</p>
                             <div class="progress">
                                 <span class="python"></span>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
