--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                     A UI/UX Designer.
                 </h1>
                 <p>
-                    I'm UI/UX Designer, I love to create beautiful and functional apps design.
-                    Ability to translate business requirements into technical solutions. Looking to start the career as an entry-level UI/UX Designer with a reputed firm driven by technology.
+                   I'm a UI/UX designer. I am passionate about creating beautiful and functional app designs and have the ability to translate business requirements into technical solutions. I am looking to begin my career as an entry-level UI/UX designer.
                 </p>
                 <div class="btn-con">
                     <a href="https://drive.google.com/file/d/1s58zHZeidkmkqq4vLXIdMmqa5q8SVGC4/view" class="main-btn">
