--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        I am fresher looking forward to develop my skill to another level. <br /> <br /> I am a UI/UX Designer
-                        also I have some basic knowledge of HTML and CSS, 
-                        looking to develop my skill from entry-level UI/UX Designer to senior-level UI/UX Designer. 
-                        Also have interest to learn about Product Design and Product Management.
+                      I am a fresher looking forward to developing my skills to another level. <br /> <br />I am a UI/UX designer.
+I also have some basic knowledge of HTML and CSS and am looking to develop my skills from entry-level UI/UX designer to senior-level UI/UX designer. I also have an interest in learning about product design and product management.
                     </p>
                     <div class="btn-con">
                         <a href="https://drive.google.com/file/d/1s58zHZeidkmkqq4vLXIdMmqa5q8SVGC4/view" class="main-btn">
