--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                    I'm a UI/UX designer. I am passionate about creating beautiful and functional app designs and have the ability to translate business requirements into technical solutions. I am looking to begin my career as an entry-level UI/UX designer.
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1s58zHZeidkmkqq4vLXIdMmqa5q8SVGC4/view" class="main-btn">
+                    <a href="https://drive.google.com/file/d/1ygYUwQb5sLszaRx1KkBqt1-O6rBd0xb7/view?usp=drive_link" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -50,7 +50,7 @@
 I also have some basic knowledge of HTML and CSS and am looking to develop my skills from entry-level UI/UX designer to senior-level UI/UX designer. I also have an interest in learning about product design and product management.
                     </p>
                     <div class="btn-con">
-                        <a href="https://drive.google.com/file/d/1s58zHZeidkmkqq4vLXIdMmqa5q8SVGC4/view" class="main-btn">
+                        <a href="https://drive.google.com/file/d/1ygYUwQb5sLszaRx1KkBqt1-O6rBd0xb7/view?usp=drive_link" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -517,7 +517,7 @@ I also have some basic knowledge of HTML and CSS and am looking to develop my sk
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="https://drive.google.com/file/d/1s58zHZeidkmkqq4vLXIdMmqa5q8SVGC4/view" class="main-btn">
+                                <a href="https://drive.google.com/file/d/1ygYUwQb5sLszaRx1KkBqt1-O6rBd0xb7/view?usp=drive_link" class="main-btn">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
