--- a/index.html
+++ b/index.html
@@ -89,55 +89,55 @@ I also have some basic knowledge of HTML and CSS and am looking to develop my sk
                     <div class="progress-bar">
                         <p class="prog-title">UI Design</p>
                         <div class="progress-con">
-<!--                             <p class="prog-text">90%</p>
+                            <p class="prog-text">83%</p>
                             <div class="progress">
                                 <span class="html"></span>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">UX Research</p>
                         <div class="progress-con">
-<!--                             <p class="prog-text">80%</p>
+                            <p class="prog-text">80%</p>
                             <div class="progress">
                                 <span class="css"></span>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">Wireframing</p>
                         <div class="progress-con">
-<!--                             <p class="prog-text">100%</p>
+                            <p class="prog-text">95%</p>
                             <div class="progress">
                                 <span class="js"></span>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">Figma</p>
                         <div class="progress-con">
-<!--                             <p class="prog-text">90%</p>
+                            <p class="prog-text">90%</p>
                             <div class="progress">
                                 <span class="react"></span>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">Design Thinking Framework</p>
                         <div class="progress-con">
-<!--                             <p class="prog-text">85%</p>
+                            <p class="prog-text">87%</p>
                             <div class="progress">
                                 <span class="node"></span>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">Visual Design</p>
+                        <p class="prog-title">Prototyping</p>
                         <div class="progress-con">
-<!--                             <p class="prog-text">85%</p>
+                            <p class="prog-text">80%</p>
                             <div class="progress">
                                 <span class="python"></span>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
