--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                      I am a fresher looking forward to developing my skills to another level. <br /> <br />I am a UI/UX designer.
-I also have some basic knowledge of HTML and CSS and am looking to develop my skills from entry-level UI/UX designer to senior-level UI/UX designer. I also have an interest in learning about product design and product management.
+                      Hi, I'm Ashutosh, a UI/UX designer (Fresher). <br /> I am a recent graduate with a BE in Computer Science Engineering in 2023 and I'm excited to apply for the UI/UX designer. I am Nepalese citizen, but I have completed all my studies from India. Currently I am staying India and as Nepalese citizen, I am eligible to work in India.
                     </p>
                     <div class="btn-con">
                         <a href="https://drive.google.com/file/d/1ygYUwQb5sLszaRx1KkBqt1-O6rBd0xb7/view?usp=drive_link" class="main-btn">
