--- a/index.html
+++ b/index.html
@@ -232,26 +232,26 @@
                         </div>
                     </div>
                 </div>
-<!--                 <div class="portfolio-item">
+               <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="img/Cover - 1.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+<!--                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
+                            </a> -->
                             <a href="#" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
-                            <a href="#" class="icon">
+<!--                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
+<!--                 <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port3.jpg" alt="">
                     </div>
@@ -266,7 +266,7 @@
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a> -->
+                            </a> --> -->
 <!--                         </div>
                     </div>
                 </div>
