--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 </div>
                <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/Cover - 1.png" alt="">
+                        <img src="img/cover.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -242,7 +242,7 @@
 <!--                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a> -->
-                            <a href="#" class="icon">
+                            <a href="https://www.behance.net/gallery/202570807/bizMasterai-(UIUX-Case-Study)" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
 <!--                             <a href="#" class="icon">
@@ -266,7 +266,7 @@
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a> --> -->
+                            </a> --> 
 <!--                         </div>
                     </div>
                 </div>
