--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/cover image.png" alt="">
+                        <img src="img/cover image 1.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
