--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
                         </a>
                     </div>
                 </div>
-                <!-- <div class="right-about">
+                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">650+</p>
+                            <p class="large-text">10+</p>
                             <p class="small-text">Projects <br /> Completed</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">10+</p>
+                            <p class="large-text">1+</p>
                             <p class="small-text">Years of <br /> experience</p>
                         </div>
                     </div>
-                    <div class="about-item">
+<!--                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">300+</p>
                             <p class="small-text">Happy <br /> Clients</p>
@@ -79,8 +79,8 @@
                             <p class="large-text">400+</p>
                             <p class="small-text">Customer <br /> reviews</p>
                         </div>
-                    </div>
-                </div> -->
+                    </div> -->
+                </div> 
             </div>
             <div class="about-stats">
                 <h4 class="stat-title">My Skills</h4>
@@ -251,26 +251,26 @@
                         </div>
                     </div>
                 </div>
-<!--                 <div class="portfolio-item">
+              <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port3.jpg" alt="">
+                        <img src="img/ev cover.png" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+<!--                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
+                            </a> -->
+                            <a href="https://www.behance.net/gallery/205950707/EVMate-(a-mobile-app-for-electric-vehicle)" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
-                            <a href="#" class="icon">
+<!--                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
-                            </a> --> 
-<!--                         </div>
+                            </a> -->  
+                        </div>
                     </div>
                 </div>
-                <div class="portfolio-item">
+<!--                 <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port4.jpg" alt="">
                     </div>
