--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@
                             <p class="small-text">Years of <br /> experience</p>
                         </div>
                     </div>
-<!--                     <div class="about-item">
+                 <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">300+</p>
-                            <p class="small-text">Happy <br /> Clients</p>
+                            <p class="large-text">3+</p>
+                            <p class="small-text">UI/UX Case <br /> Studies </p>
                         </div>
                     </div>
-                    <div class="about-item">
+<!--                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">400+</p>
                             <p class="small-text">Customer <br /> reviews</p>
                         </div>
-                    </div> -->
+                    </div> --> 
                 </div> 
             </div>
             <div class="about-stats">
